<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".server.fragments.HostSettingsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">

            <EditText
                android:id="@+id/changePartyNameEditText"
                android:layout_width="200dp"
                android:layout_height="52dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/text_changePartyName"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:autofillHints="partyName"
                app:layout_constraintEnd_toStartOf="@+id/savePartyNameButton"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsHeadingTextView" />

            <TextView
                android:id="@+id/settingsHeadingTextView"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:text="@string/heading_settings"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ipAddressSettingsTextView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/text_ip_address"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changePartyNameEditText" />

            <TextView
                android:id="@+id/passwordSettingsTextView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/app_password"
                android:textColor="#FDFDFD"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ipAddressSettingsTextView" />

            <ImageButton
                android:id="@+id/shareButtonSettingsImageButton"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_green_round"
                android:contentDescription="@string/text_shareAddress_ContentD"
                android:src="@drawable/icon_share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shareIPAddressTextView"
                app:layout_constraintTop_toBottomOf="@+id/qrConnectionSettingsImageView" />

            <ImageButton
                android:id="@+id/shareQRButtonSettingsImageButton"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_green_round"
                android:contentDescription="@string/text_shareQR_ContentD"
                android:src="@drawable/icon_share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shareIPAddressTextView"
                app:layout_constraintTop_toBottomOf="@+id/shareIPAddressTextView" />

            <ImageView
                android:id="@+id/qrConnectionSettingsImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:background="@color/button_green"
                android:contentDescription="@string/text_qrSettings_ContentD"
                android:src="@drawable/icon_qr_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordSettingsTextView" />

            <TextView
                android:id="@+id/changePartyTypeTextView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/text_partyType"
                android:textAlignment="center"
                android:textColor="#FDFDFD"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shareLinkTextView" />

            <RadioGroup
                android:id="@+id/partyTypeSettingsRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changePartyTypeTextView">

                <RadioButton
                    android:id="@+id/allInSettingsRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_allInType"
                    android:textColor="#FFF"
                    app:useMaterialThemeColors="false" />

                <RadioButton
                    android:id="@+id/vetoSettingRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_vetoType"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/votingSettingsRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_votingType"
                    android:textColor="#FFF" />
            </RadioGroup>

            <Button
                android:id="@+id/savePartyNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp"
                android:text="@string/text_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsHeadingTextView" />

            <View
                android:id="@+id/settingsDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shareIPAddressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_shareIP_Descrition"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qrConnectionSettingsImageView" />

            <TextView
                android:id="@+id/shareQRTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:shadowColor="#FFFFFF"
                android:text="@string/text_shareQR_Description"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shareIPAddressTextView" />

            <TextView
                android:id="@+id/shareLinkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_shareLink_Description"
                android:textColor="#FFFEFE"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shareQRTextView" />

            <ImageButton
                android:id="@+id/shareLinkButtonSettingsImageButton"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_green_round"
                android:src="@drawable/icon_share"
                android:contentDescription="@string/text_linkSettings_ContentD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shareIPAddressTextView"
                app:layout_constraintTop_toBottomOf="@+id/shareQRTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>