<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsHostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/changePartyNameEditText"
                android:layout_width="350dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/text_changePartyName"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsHeadingTextView" />

            <TextView
                android:id="@+id/settingsHeadingTextView"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:text="@string/heading_settings"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ipAddressSettingsTextView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_ip_address"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changePartyNameEditText" />

            <TextView
                android:id="@+id/passwordSettingsTextView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/app_password"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ipAddressSettingsTextView" />

            <ImageButton
                android:id="@+id/shareButtonSettingsImageButton"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:src="@drawable/ic_share_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordSettingsTextView" />

            <ImageView
                android:id="@+id/qrConnectionSettingsImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:background="@color/button_green"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shareButtonSettingsImageButton" />

            <TextView
                android:id="@+id/changePartyTypeTextView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/text_partyType"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qrConnectionSettingsImageView" />

            <RadioGroup
                android:id="@+id/partyTypeSettingsRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changePartyTypeTextView">

                <RadioButton
                    android:id="@+id/allInSettingsRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_allInType" />

                <RadioButton
                    android:id="@+id/vetoSettingRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_vetoType" />

                <RadioButton
                    android:id="@+id/votingSettingsRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_votingType" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>