<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context=".client.fragments.ClientExitConnectionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/closePartyTextView"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:lineSpacingExtra="18sp"
            android:text="@string/text_endParty"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/acceptEndPartyButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="67dp"
            android:text="@string/text_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/denyEndPartyButton"
            app:layout_constraintTop_toBottomOf="@+id/savePlaylistNameEditText" />

        <Button
            android:id="@+id/denyEndPartyButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="50dp"
            android:text="@string/text_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/savePlaylistNameEditText" />

        <View
            android:id="@+id/closePartyDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/savePlaylistSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/text_closePartySavePlaylist"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closePartyTextView" />

        <EditText
            android:id="@+id/savePlaylistNameEditText"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="playlistName"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/text_enterNewPartyName"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/savePlaylistSwitch" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>